<resources>
    <string name="app_name">阅诗</string>

    <string name="main_text_0">发现更多美好</string>
    <string name="main_text_1">正在加载内容，品杯茶再走。</string>
    <string name="main_text_3">我的笔记</string>
    <string name="main_edittext_1">记点笔记</string>
    <string name="button_1">发 送</string>

    <string name="search_1">输入诗词</string>
    <string name="button_2">搜 索</string>
    <string name="noresult">抱歉，暂无内容。</string>
</resources>