<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bird"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/all_buttons"
        android:text="@string/button_2"
        android:textColor="#e2e1e4"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/search_1"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/notes_edittext"
        android:ems="10"
        android:hint="@string/search_1"
        android:inputType="textPersonName"
        android:textColor="#b598a1"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/noresult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/noresult"
        android:textAlignment="center"
        android:textColor="#7c1823"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_1" />

    <ListView
        android:id="@+id/list_1"
        android:layout_width="360dp"
        android:layout_height="606dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_1"
        app:layout_constraintVertical_bias="0.472">

    </ListView>

</androidx.constraintlayout.widget.ConstraintLayout>